--- a/adivinhar_numero.html
+++ b/adivinhar_numero.html
@@ -2,7 +2,7 @@
 <html lang="pt-pt"> <!--idioma-->
 
 <head>
-    <meta charset="UTF-8"> <!-- Codificação em charset UTF-8 -->
+    <meta charset="utf-8"> <!-- Codificação em charset UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--responsividade - escala 100%-->
     <title>Salão de Pokémons</title> <!-- título do separador -->
     <link rel="stylesheet" type="text/css" href="style.css"> <!-- ligação à folha de estilos -->
@@ -12,14 +12,23 @@
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">    
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+    <!--script adivinhar número-->
+    <script src="scripts/adivinharnumero.js"></script>
+
+    <!--Letra Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <img src="img/logo.png">
+
     <!-- Barra de navegação -->
     <nav>
         <ul>
@@ -46,38 +55,19 @@
     </nav>
     <!--cabeçalho da página-->
     <header>
-        <h1>Bulbasaur</h1>
+        <h1>Qual é o número?</h1>
     </header>
-
     <main>
-        <p class="center"><img src="img/bulbasaur.jpg" class="responsive"></p>
-        <br>
+    <!-- jogo de adivinha num botão -->  
+        <div id="fundoperguntas">
+            <!-- script no ficheiro - método externo -- adivinhar um número    -->
+            <button class="botao botaoadivinhar bungee-regular centrarimagens" onclick="jogoAdivinhar()">Adivinhe o
+                número</button>
+          
 
-        <table>
-            <tr>
-                <th>Nome</th>
-                <th>Tipo</th>
-                <th>Espécie</th>
-                <th>Altura</th>
-                <th>Peso</th>
-                <th>Habilidades</th>
-                <th>Origem do nome</th>
-            </tr>
-            <tr>
-                <td>Bulbasaur</td>
-                <td>GRASS, POISON</td>
-                <td>Seed Pokémon</td>
-                <td>0.7 m</td>
-                <td>6.9 kg</td>
-                <td>Overgrow</td>
-                <td><em>bulb</em> (tipo de planta) <br>
-                    saur (lagarto)</td>
-            </tr>
-        </table>
-        <p></p>
+        </div>
     </main>
-
-    <!--rodapé-->
+    <!------rodapé-------->
     <footer>
         <div class="grid-container-footer">
             <div class="grid-itemfooter">
