--- a/pikachu.html
+++ b/pikachu.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
+<html lang="pt-pt"> <!--idioma-->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salão de Pokémons</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8"> <!-- Codificação em charset UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--responsividade - escala 100%-->
+    <title>Salão de Pokémons</title> <!-- título do separador -->
+    <link rel="stylesheet" type="text/css" href="style.css"> <!-- ligação à folha de estilos -->
 
-   <!--favicon -->
+    <!--favicon -->
     <link rel="shortcut icon" href="img/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">    
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
@@ -33,6 +33,14 @@
             </li>
             <li><a href="historia.html">História</a></li>
             <li><a href="galeria.html">Galeria</a></li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Jogos</a>
+                <div class="dropdown-content">
+                    <a href="adivinhar_numero.html">Adivinhar</a>
+                    <a href="quiz.html">Quiz</a>
+                    <a href="jogo_memoria.html">Memória</a>
+                </div>
+            </li>
             <li><a href="contactos.html">Contactos</a></li>
         </ul>
     </nav>
@@ -42,7 +50,7 @@
     </header>
 
     <main>
-        <p class="center"><img src="img/pikachu.jpg"></p>
+        <p class="center"><img src="img/pikachu.jpg" class="responsive"></p>
         <br>
         <table>
             <tr>
@@ -72,9 +80,6 @@
 
     <!--rodapé-->
     <footer>
-        <p class="center">Formação | Citeforma 2024 | UFCD 5414 Programação para a WEB - cliente (<em>Client-side</em>)
-        </p>
-
         <div class="grid-container-footer">
             <div class="grid-itemfooter">
                 <p class="bold">Redes Sociais</p>
@@ -86,6 +91,7 @@
                 <p class="bold">Menu do site</p>
                 <p><a href="index.html">Início</a></p>
                 <p><a href="historia.html">História</a></p>
+                <p><a href="galeria.html">Galeria</a></p>
                 <p><a href="contactos.html">Contactos</a></p>
             </div>
             <div class="grid-itemfooter">
@@ -99,6 +105,8 @@
                 <p>Telefone</p>
             </div>
         </div>
+        <p class="center branco">Formação | Citeforma 2024 | UFCD 5414 Programação para a WEB - cliente (<em>Client-side</em>)
+        </p>
     </footer>
 </body>
 
